oidc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    k8s-app: oidc-auth
  name: oidc-auth
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: oidc-auth
    spec:
      serviceAccountName: oidc-auth-admin
      imagePullSecrets:
        - name: gcr-json-key
      containers:
      - name: oidc-auth
        image: us.gcr.io/prp-k8s/oidc-auth:latest
        imagePullPolicy: Always
      nodeSelector:
        routable: "true"
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: oidc-auth
  name: oidc-auth
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: oidc-auth
