oidc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nautilus-portal
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nautilus-portal
          servicePort: 80
